color dans chaque table

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -38,10 +38,12 @@
             .tuileInfo {
                 width: 233px;
                 display: inline-table;
+                display: -moz-inline-table;
             }
             .tuileMiss {
                 width: 350px;
                 display: inline-table;
+                display: -moz-inline-table;
             }
         }
     </style>
@@ -77,10 +79,10 @@
     </tr>
     <tr>
         <td align="center">
-            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="color: #354052; background: #ffffff; max-width: 700px; text-align: center">
+            <table class="container" cellpadding="0" cellspacing="0" width="100%" style="background: #ffffff; max-width: 700px; text-align: center">
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0; font-weight: bold">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="color: #354052; padding: 20px 0; font-weight: bold; text-align: center">
                             <tr>
                                 <td style="font-size: 20px; line-height: 4">!! PLACES LIMITÉES !!</td>
                             </tr>
@@ -94,7 +96,7 @@
                     <td><table cellpadding="0" cellspacing="0" width="100%">
                         <tr align="center">
                             <td><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/map.png" alt="Lieu, date et heure de la soirée"/>
@@ -110,7 +112,7 @@
                                     <td>17/12/2020 à 20h</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/play.png" alt="Styles de musique joués"/>
@@ -120,7 +122,7 @@
                                     <td>RnB, Hip Hop, Latino, House, Electro</td>
                                 </tr>
                             </table><!--
-                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="padding: 35px 0; font-size: 20px; text-align: center">
+                            --><table cellpadding="0" cellspacing="0" class="tuileInfo" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                 <tr>
                                     <td style="padding-bottom: 11px">
                                         <img width="42" height="42" src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/euro.png" alt="Prix de l'entrée"/>
@@ -140,9 +142,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <table cellpadding="0" cellspacing="0" width="100%" style="padding: 20px 0;">
+                        <table cellpadding="0" cellspacing="0" width="100%" style="color: #354052; padding: 20px 0;">
                             <tr>
-                                <td style="font-size: 30px; font-weight: bold">
+                                <td style="font-size: 30px; font-weight: bold;  text-align: center">
                                     La meilleure soirée étudiante de Noël à Gap, avec en guest stars 4 navigatrices !
                                 </td>
                             </tr>
@@ -154,7 +156,7 @@
                         <table cellpadding="0" cellspacing="0" width="100%">
                             <tr align="center">
                                 <td><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-edge.jpg" alt="Photo de Miss Edge" width="182" height="270"/>
@@ -167,7 +169,7 @@
                                         <td>A besoin de beaucoup d’attention !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-firefox.jpg" alt="Photo de Miss Firefox" width="182" height="270"/>
@@ -180,7 +182,7 @@
                                         <td>Libre et sauvage, tel un renard !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-opera.jpg" alt="Photo de Miss Opera" width="182" height="270"/>
@@ -193,7 +195,7 @@
                                         <td>La norvégienne discrète et astucieuse !</td>
                                     </tr>
                                 </table><!--
-                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="padding: 35px 0; font-size: 20px; text-align: center">
+                                --><table cellpadding="0" cellspacing="0" class="tuileMiss" style="color: #354052; padding: 35px 0; font-size: 20px; text-align: center">
                                     <tr>
                                         <td style="padding-bottom: 11px">
                                             <img src="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/img/miss-safari.jpg" alt="Photo de Miss Safari" width="182" height="270"/>
