--- a/email/email_party.html
+++ b/email/email_party.html
@@ -17,7 +17,7 @@
             height: 400px;
         }
         .container {
-            padding: 16px;
+            padding: 0 16px;
         }
         .tuileInfo {
             width: 190px;
@@ -38,12 +38,10 @@
             .tuileInfo {
                 width: 233px;
                 display: inline-table;
-                display: -moz-inline-table;
             }
             .tuileMiss {
                 width: 350px;
                 display: inline-table;
-                display: -moz-inline-table;
             }
         }
     </style>
@@ -51,7 +49,7 @@
 <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
         <td align="center"
-            style="padding: 15px 0; background-color: #131e58; color: #ffffff">
+            style="padding: 16px; background-color: #131e58; color: #ffffff">
             Cet e-mail ne s'affiche pas correctement ?
             <a href="http://www.yohansalamone.com/resources/projets/MIW_Day3_Emailing/email/email_party.html"
                style="color: #ffffff">
