2 head + style dans le head

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="fr">
+<head><!-- Yahoo Mail (Android) supprime le 1er head, donc j'en mets 2 --></head>
 <head>
     <meta charset="utf8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-<body>
     <style>
         html, body,
         table, thead, tbody, tr, th, td,
@@ -45,6 +44,8 @@
             }
         }
     </style>
+</head>
+<body>
 
 <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
