span caché pour l'aperçu de l'e-mail

--- a/email/email_party.html
+++ b/email/email_party.html
@@ -47,6 +47,13 @@
 </head>
 <body>
 
+<span style="display: none">
+    Inscris-toi à la + grosse soirée étudiante ! PLACES LIMITÉES !
+    - au 1er étage du bâtiment MIW, le 17/12/2020 à 20h
+    - on jouera de la musique RnB, Hip Hop, Latino, House, Electro
+    - prix de l'entrée : 15€ + 1 conso (sur présentation de cet e-mail)
+</span>
+
 <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="font-family: Arial, sans-serif;">
     <tr>
         <td align="center"
